[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Amitesh Rai <amiteshrai@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.109.0"
uvicorn = "0.26.0"
pydantic-settings = "2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
